.build_release/src/caffe/data_reader_old.o.warnings.txt
In file included from src/caffe/data_reader_old.cpp:7:0:
./include/caffe/data_reader_old.hpp:46:36: error: ISO C++ forbids declaration of ‘DISABLE_COPY_AND_ASSIGN’ with no type [-fpermissive]
   DISABLE_COPY_AND_ASSIGN(QueuePair);
                                    ^
./include/caffe/data_reader_old.hpp:64:31: error: ISO C++ forbids declaration of ‘DISABLE_COPY_AND_ASSIGN’ with no type [-fpermissive]
   DISABLE_COPY_AND_ASSIGN(Body);
                               ^
./include/caffe/data_reader_old.hpp:78:35: error: ISO C++ forbids declaration of ‘DISABLE_COPY_AND_ASSIGN’ with no type [-fpermissive]
 DISABLE_COPY_AND_ASSIGN(DataReader);
                                   ^
src/caffe/data_reader_old.cpp: In instantiation of ‘caffe::DataReader<T>::Body::Body(const caffe::LayerParameter&) [with T = caffe::Datum]’:
src/caffe/data_reader_old.cpp:135:16:   required from here
src/caffe/data_reader_old.cpp:77:24: error: no matching function for call to ‘caffe::InternalThread::InternalThread()’
       new_queue_pairs_() {
                        ^
In file included from ./include/caffe/data_reader_old.hpp:9:0,
                 from src/caffe/data_reader_old.cpp:7:
./include/caffe/internal_thread.hpp:21:3: note: candidate: caffe::InternalThread::InternalThread(int, size_t, size_t, bool)
   InternalThread(int target_device, size_t rank_, size_t threads, bool delayed);
   ^
./include/caffe/internal_thread.hpp:21:3: note:   candidate expects 4 arguments, 0 provided
./include/caffe/internal_thread.hpp:19:7: note: candidate: caffe::InternalThread::InternalThread(const caffe::InternalThread&)
 class InternalThread {
       ^
./include/caffe/internal_thread.hpp:19:7: note:   candidate expects 1 argument, 0 provided
src/caffe/data_reader_old.cpp: In instantiation of ‘void caffe::DataReader<T>::Body::InternalThreadEntry() [with T = caffe::Datum]’:
src/caffe/data_reader_old.cpp:135:16:   required from here
src/caffe/data_reader_old.cpp:104:12: error: no matching function for call to ‘caffe::DataReader<caffe::Datum>::Body::must_stop()’
     while (!must_stop()) {
            ^
In file included from ./include/caffe/data_reader_old.hpp:9:0,
                 from src/caffe/data_reader_old.cpp:7:
./include/caffe/internal_thread.hpp:73:8: note: candidate: bool caffe::InternalThread::must_stop(int)
   bool must_stop(int id) {
        ^
./include/caffe/internal_thread.hpp:73:8: note:   candidate expects 1 argument, 0 provided
src/caffe/data_reader_old.cpp: In instantiation of ‘caffe::DataReader<T>::Body::Body(const caffe::LayerParameter&) [with T = caffe::AnnotatedDatum]’:
src/caffe/data_reader_old.cpp:136:16:   required from here
src/caffe/data_reader_old.cpp:77:24: error: no matching function for call to ‘caffe::InternalThread::InternalThread()’
       new_queue_pairs_() {
                        ^
In file included from ./include/caffe/data_reader_old.hpp:9:0,
                 from src/caffe/data_reader_old.cpp:7:
./include/caffe/internal_thread.hpp:21:3: note: candidate: caffe::InternalThread::InternalThread(int, size_t, size_t, bool)
   InternalThread(int target_device, size_t rank_, size_t threads, bool delayed);
   ^
./include/caffe/internal_thread.hpp:21:3: note:   candidate expects 4 arguments, 0 provided
./include/caffe/internal_thread.hpp:19:7: note: candidate: caffe::InternalThread::InternalThread(const caffe::InternalThread&)
 class InternalThread {
       ^
./include/caffe/internal_thread.hpp:19:7: note:   candidate expects 1 argument, 0 provided
src/caffe/data_reader_old.cpp: In instantiation of ‘void caffe::DataReader<T>::Body::InternalThreadEntry() [with T = caffe::AnnotatedDatum]’:
src/caffe/data_reader_old.cpp:136:16:   required from here
src/caffe/data_reader_old.cpp:104:12: error: no matching function for call to ‘caffe::DataReader<caffe::AnnotatedDatum>::Body::must_stop()’
     while (!must_stop()) {
            ^
In file included from ./include/caffe/data_reader_old.hpp:9:0,
                 from src/caffe/data_reader_old.cpp:7:
./include/caffe/internal_thread.hpp:73:8: note: candidate: bool caffe::InternalThread::must_stop(int)
   bool must_stop(int id) {
        ^
./include/caffe/internal_thread.hpp:73:8: note:   candidate expects 1 argument, 0 provided
